update endpoints to use bundleid
